--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # network
   dio: ^4.0.6
 
+  # objects equals
+  equatable: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
