--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   device_info_plus: ^5.0.5
 
   # network
-  dio: ^4.0.6
+  http: ^0.13.5
   data_connection_checker_nulls: ^0.0.2
 
   # objects equals
